--- a/templates/glav6.html
+++ b/templates/glav6.html
@@ -9,7 +9,7 @@
         статьи
     </div>
     <div class="container">
-        <a href="/rgz/initiative">Посмотреть статьи</a>
+        <a href="/rgz/artic">Посмотреть статьи</a>
         <a href="/rgz/newarticle">Создать статью</a>
     </div>
     <form action="/rgz/logout">
